--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@remix-run/router": "^1.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "valibot": "^0.35.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
